test/functions/bradc/intents-error.good
intents-error.chpl:23: In function 'callblank':
intents-error.chpl:25: error: non-lvalue actual passed to ref argument
